WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209450
REGRESSION: ASSERTION FAILED: settings().textAutosizingEnabled() && settings().textAutosizingUsesIdempotentMode() on various tests
https://bugs.webkit.org/show_bug.cgi?id=209450
Summary
REGRESSION: ASSERTION FAILED: settings().textAutosizingEnabled() && settings(...
Jason Lawrence
Reported
2020-03-23 16:44:45 PDT
Created
attachment 394327
[details]
visible-control-characters-1-crash-log fast/text/control-characters/visible-control-characters-1.html Description: This test is flaky crashing on iOS wk2 Debug. The oldest crash in the visible history appears on 03/01/2020. History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Ftext%2Fcontrol-characters%2Fvisible-control-characters-1.html&platform=ios&limit=50000&style=debug
Crash Log Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x00000003a417f75e WTFCrash + 14 (Assertions.cpp:309) 1 com.apple.WebCore 0x00000003a958539b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x00000003ac8cc4f1 WebCore::Page::recomputeTextAutoSizingInAllFrames() + 145 (Page.cpp:3044) 3 com.apple.WebKit 0x0000000391828491 WebKit::WebPage::textAutoSizingAdjustmentTimerFired() + 33 (WebPage.cpp:7033) 4 com.apple.WebKit 0x0000000391864241 decltype(*(std::__1::forward<WebKit::WebPage*&>(fp0)).*fp()) std::__1::__invoke<void (WebKit::WebPage::*&)(), WebKit::WebPage*&, void>(void (WebKit::WebPage::*&)(), WebKit::WebPage*&) + 113 (type_traits:4302)
Attachments
visible-control-characters-1-crash-log
(136.03 KB, text/plain)
2020-03-23 16:44 PDT
,
Jason Lawrence
no flags
Details
For EWS (..eventually)
(12.46 KB, patch)
2021-04-04 15:53 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
For EWS (eventually)
(14.17 KB, patch)
2021-04-04 17:14 PDT
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fix macOS build
(13.69 KB, patch)
2021-04-05 11:07 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-03-23 16:45:12 PDT
<
rdar://problem/60799255
>
Jason Lawrence
Comment 2
2020-03-23 16:49:35 PDT
I have marked this test as crashing here:
https://trac.webkit.org/changeset/258889/webkit
Jason Lawrence
Comment 3
2020-03-24 09:16:20 PDT
I have further adjusted the test expectations while this issue is investigated.
https://trac.webkit.org/changeset/258911/webkit
Ryan Haddad
Comment 4
2020-08-06 14:38:12 PDT
***
Bug 210205
has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 5
2020-08-06 14:38:21 PDT
***
Bug 215226
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 6
2020-08-06 16:17:03 PDT
In all cases, it's alphabetically the first test in a directory hitting this. And looking at one random test run, I see that it was fast/text-autosizing preceding it. So clearly fast/text-autosizing tests break subsequent tests.
Wenson Hsieh
Comment 7
2021-04-04 15:19:18 PDT
***
Bug 214363
has been marked as a duplicate of this bug. ***
Wenson Hsieh
Comment 8
2021-04-04 15:53:22 PDT
Comment hidden (obsolete)
Created
attachment 425135
[details]
For EWS (..eventually)
Wenson Hsieh
Comment 9
2021-04-04 15:55:03 PDT
***
Bug 218715
has been marked as a duplicate of this bug. ***
Wenson Hsieh
Comment 10
2021-04-04 17:14:31 PDT
Comment hidden (obsolete)
Created
attachment 425136
[details]
For EWS (eventually)
Wenson Hsieh
Comment 11
2021-04-05 11:07:03 PDT
Created
attachment 425175
[details]
Fix macOS build
EWS
Comment 12
2021-04-05 19:36:18 PDT
Committed
r275480
: <
https://commits.webkit.org/r275480
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425175
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug